--- a/src/styles/_contacts.scss
+++ b/src/styles/_contacts.scss
@@ -7,19 +7,17 @@
 
 // Contact form
 
-#container-contact {
+.container-contact {
   border: solid 3px black;
   max-width: 768px;
-  margin: 60px auto;
+  margin: 60px auto 8rem;
   position: relative;
 
   h3 {
-    color: black;
-    font-size: 32px;
-    font-weight: 700;
-    letter-spacing: 7px;
+    font-family: 'DM Serif Display';
+    font-size: 3rem;
     text-align: center;
-    text-transform: uppercase;
+    margin-bottom: 1rem;
   }
 
   .underline {
@@ -30,16 +28,15 @@
 
   .icon_wrapper {
     margin: 50px auto 0;
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    img {
+      width: 50px;
+      margin: 0 25px;
+    }
   }
 
-  .icon-contact {
-    display: block;
-    fill: black;
-    height: 50px;
-    margin: 0 auto;
-    width: 50px;
-  }
+
 
   .email {
     float: right;
@@ -74,6 +71,7 @@
     outline: none;
     padding: 0 0 0.875em 0;
   }
+
   .message {
     float: none;
   }
@@ -84,7 +82,8 @@
   }
 
   .select-subject {
-    background: url('https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-down-32.png') no-repeat right;
+    background: url('../images/SVGIcons/arrow-down.svg') no-repeat right;
+    background-size: 16px;
     outline: none;
     -moz-appearance: none;
     -webkit-appearance: none;
@@ -127,13 +126,13 @@
     color: #474544;
   }
   
-  #form_button {
+  .form_button {
     background: none;
-    border: solid 2px #474544;
-    color: #474544;
+    border: solid 2px black;
+    color: black;
     cursor: pointer;
     display: inline-block;
-    font-family: 'Helvetica', Arial, sans-serif;
+    font-family: 'DM Serif Display';
     font-size: 0.875em;
     font-weight: bold;
     outline: none;
@@ -146,9 +145,9 @@
     transition: all 0.3s;
   }
   
-  #form_button:hover {
-    background: #474544;
-    color: #F2F3EB;
+  .form_button:hover {
+    background-color: rgba(114, 0, 0, 1);
+    color: antiquewhite;
   }
 }
 
@@ -183,50 +182,3 @@ textarea {
 
 // -- End Contact form
 
-.outside-contact-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 8rem;
-}
-
-.contact-container {
-  display: flex;
-  width: 35%;
-  margin-top: 7rem;
-}
-
-.contact-header {
-  h2 {
-    font-family: 'DM Serif Display';
-    font-size: 4rem;
-    text-align: center;
-    margin-bottom: 3rem;
-  }
-}
-
-.positioning-contact-details {
-  display: flex;
-  align-items: center;
-  margin-bottom: .5rem;
-  .contact-icon {
-    width: 50px;
-    height: 50px;
-    margin-right: 1rem;
-  }
-  a {
-    text-decoration: none;
-    color: black;
-  }
-  a:hover {
-    // color:rgb(114, 0, 0);
-    cursor: url('../images/circleTwo.svg'), auto;
-    padding: 2rem 0;
-    margin: -2rem 0;
-  }
-  p {
-    font-family: 'Raleway', sans-serif;
-    font-size: 1.2rem;
-    font-weight: bold;
-  }
-}
