--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -104,6 +104,49 @@
   stroke: antiquewhite;
 }
 
+.darkmode .container-contact {
+  border-color: antiquewhite;
+}
+
+.darkmode .container-contact .underline {
+  border-bottom-color: antiquewhite;
+}
+
+.darkmode .container-contact input[type='text'], .darkmode .container-contact [type='email'], .darkmode .container-contact .select-subject, .darkmode .container-contact textarea {
+  border-bottom-color: antiquewhite;
+  color: antiquewhite;
+  opacity: .75;
+}
+
+.darkmode .container-contact ::-webkit-input-placeholder {
+  color: antiquewhite;
+  opacity: .75;
+}
+
+.darkmode .container-contact :-moz-placeholder {
+  color: antiquewhite;
+  opacity: .75;
+}
+
+.darkmode .container-contact ::-moz-placeholder {
+  color: antiquewhite;
+  opacity: .75;
+}
+
+.darkmode .container-contact :-ms-input-placeholder {
+  color: antiquewhite;
+  opacity: .75;
+}
+
+.darkmode .container-contact .form_button {
+  border-color: antiquewhite;
+  color: antiquewhite;
+}
+
+.darkmode .container-contact .select-subject {
+  background: url("https://svgshare.com/i/_Wk.svg") no-repeat right;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
@@ -818,47 +861,47 @@ details p {
           animation: open 4s ease-in-out;
 }
 
-#container-contact {
+.container-contact {
   border: solid 3px black;
   max-width: 768px;
-  margin: 60px auto;
+  margin: 60px auto 8rem;
   position: relative;
 }
 
-#container-contact h3 {
-  color: black;
-  font-size: 32px;
-  font-weight: 700;
-  letter-spacing: 7px;
+.container-contact h3 {
+  font-family: 'DM Serif Display';
+  font-size: 3rem;
   text-align: center;
-  text-transform: uppercase;
+  margin-bottom: 1rem;
 }
 
-#container-contact .underline {
+.container-contact .underline {
   border-bottom: solid 2px black;
   margin: -0.512em auto;
   width: 80px;
 }
 
-#container-contact .icon_wrapper {
+.container-contact .icon_wrapper {
   margin: 50px auto 0;
-  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-#container-contact .icon-contact {
-  display: block;
-  fill: black;
-  height: 50px;
-  margin: 0 auto;
+.container-contact .icon_wrapper img {
   width: 50px;
+  margin: 0 25px;
 }
 
-#container-contact .email {
+.container-contact .email {
   float: right;
   width: 45%;
 }
 
-#container-contact input[type='text'], #container-contact [type='email'], #container-contact .select-subject, #container-contact textarea {
+.container-contact input[type='text'], .container-contact [type='email'], .container-contact .select-subject, .container-contact textarea {
   background: none;
   border: none;
   border-bottom: solid 2px black;
@@ -878,71 +921,72 @@ details p {
   transition: all 0.3s;
 }
 
-#container-contact input[type='text']:focus, #container-contact [type='email']:focus, #container-contact textarea:focus {
+.container-contact input[type='text']:focus, .container-contact [type='email']:focus, .container-contact textarea:focus {
   outline: none;
   padding: 0 0 0.875em 0;
 }
 
-#container-contact .message {
+.container-contact .message {
   float: none;
 }
 
-#container-contact .name {
+.container-contact .name {
   float: left;
   width: 45%;
 }
 
-#container-contact .select-subject {
-  background: url("https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-down-32.png") no-repeat right;
+.container-contact .select-subject {
+  background: url("../images/SVGIcons/arrow-down.svg") no-repeat right;
+  background-size: 16px;
   outline: none;
   -moz-appearance: none;
   -webkit-appearance: none;
 }
 
-#container-contact .select-subject::-ms-expand {
+.container-contact .select-subject::-ms-expand {
   display: none;
 }
 
-#container-contact .subject {
+.container-contact .subject {
   width: 100%;
 }
 
-#container-contact .telephone {
+.container-contact .telephone {
   width: 100%;
 }
 
-#container-contact textarea {
+.container-contact textarea {
   line-height: 150%;
   height: 150px;
   resize: none;
   width: 100%;
 }
 
-#container-contact ::-webkit-input-placeholder {
+.container-contact ::-webkit-input-placeholder {
   color: #474544;
 }
 
-#container-contact :-moz-placeholder {
-  color: #474544;
-  opacity: 1;
-}
-
-#container-contact ::-moz-placeholder {
+.container-contact :-moz-placeholder {
   color: #474544;
   opacity: 1;
 }
 
-#container-contact :-ms-input-placeholder {
+.container-contact ::-moz-placeholder {
+  color: #474544;
+  opacity: 1;
+}
+
+.container-contact :-ms-input-placeholder {
   color: #474544;
 }
 
-#container-contact #form_button {
+.container-contact .form_button {
   background: none;
-  border: solid 2px #474544;
-  color: #474544;
+  border: solid 2px black;
+  color: black;
   cursor: pointer;
   display: inline-block;
-  font-family: 'Helvetica', Arial, sans-serif;
+  font-family: 'DM Serif Display';
   font-size: 0.875em;
   font-weight: bold;
   outline: none;
@@ -952,9 +996,9 @@ details p {
   transition: all 0.3s;
 }
 
-#container-contact #form_button:hover {
-  background: #474544;
-  color: #F2F3EB;
+.container-contact .form_button:hover {
+  background-color: #720000;
+  color: antiquewhite;
 }
 
 form {
@@ -982,67 +1026,6 @@ input {
 
 textarea {
   overflow: auto;
-}
-
-.outside-contact-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: 8rem;
-}
-
-.contact-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 35%;
-  margin-top: 7rem;
-}
-
-.contact-header h2 {
-  font-family: 'DM Serif Display';
-  font-size: 4rem;
-  text-align: center;
-  margin-bottom: 3rem;
-}
-
-.positioning-contact-details {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-bottom: .5rem;
-}
-
-.positioning-contact-details .contact-icon {
-  width: 50px;
-  height: 50px;
-  margin-right: 1rem;
-}
-
-.positioning-contact-details a {
-  text-decoration: none;
-  color: black;
-}
-
-.positioning-contact-details a:hover {
-  cursor: url("../images/circleTwo.svg"), auto;
-  padding: 2rem 0;
-  margin: -2rem 0;
-}
-
-.positioning-contact-details p {
-  font-family: 'Raleway', sans-serif;
-  font-size: 1.2rem;
-  font-weight: bold;
 }
 
 /* ! Footer */
