Issues with redeploy

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -160,6 +160,7 @@
 
     .select-subject {
       background: url('https://svgshare.com/i/_Wk.svg') no-repeat right;
+      background-size: 16px;
     }
   }
 }
