--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -145,6 +145,7 @@
 
 .darkmode .container-contact .select-subject {
   background: url("https://svgshare.com/i/_Wk.svg") no-repeat right;
+  background-size: 16px;
 }
 
 body {
