Sorted darkmode projects icons

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -163,6 +163,11 @@
       background-size: 16px;
     }
   }
+
+  .tools-icons-size {
+    background: antiquewhite;
+    padding: .5rem;
+  }
 }
 
 
