--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -127,9 +127,9 @@ details p {
 }
 
 .tools-icons-size {
-  width: 40px;
-  height: 40px;
-  margin-right: 10px;
+  width: 50px;
+  height: 50px;
+  margin: 15px 15px 0;
 }
 
 .accordion-text-paragraph {
