--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -168,6 +168,12 @@
     background: antiquewhite;
     padding: .5rem;
   }
+
+  .icon_wrapper {
+    img {
+      background-color: antiquewhite;
+    }
+  }
 }
 
 
