--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -153,6 +153,10 @@
   padding: .5rem;
 }
 
+.darkmode .icon_wrapper img {
+  background-color: antiquewhite;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
@@ -426,6 +430,7 @@ nav a h2:hover {
   transition: 2s;
   display: block;
   padding: .5rem;
+  border-radius: 10px;
 }
 
 .skills-icons-positioning {
@@ -652,6 +657,7 @@ details p {
   width: 50px;
   height: 50px;
   margin: 15px 15px 0;
+  border-radius: 10px;
 }
 
 .accordion-text-paragraph {
@@ -898,8 +904,10 @@ details p {
 }
 
 .container-contact .icon_wrapper img {
-  width: 50px;
+  width: 60px;
   margin: 0 25px;
+  padding: .5rem;
+  border-radius: 10px;
 }
 
 .container-contact .email {
