--- a/src/styles/_experiences.scss
+++ b/src/styles/_experiences.scss
@@ -96,15 +96,19 @@
   display: flex;
   align-items: center;
   margin: 0 auto;
-  svg {
+  .work-experiences-icons {
     width: 300px;
+    height: 300px;
+    background: url('../images/SVGIcons/work.svg');
+    background-size: 300px;
     opacity: 0;
     transition: 4s;
   }
 }
 
-.experiences-right-side:hover {
-  svg {
+.experiences-right-side:hover,
+.experiences-right-side:active {
+  .work-experiences-icons {
     opacity: .5;
     animation: open 4s ease-in-out;
   }
