--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -174,6 +174,17 @@
       background-color: antiquewhite;
     }
   }
+
+  .experiences-right-side {
+    .work-experiences-icons {
+      background: url('https://svgshare.com/i/_Yo.svg');
+      background-size: 300px;
+    }
+  }
+
+  // details summary {
+  //   border-color:rgb(114, 0, 0)
+  // }
 }
 
 
