--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -157,6 +157,11 @@
   background-color: antiquewhite;
 }
 
+.darkmode .experiences-right-side .work-experiences-icons {
+  background: url("https://svgshare.com/i/_Yo.svg");
+  background-size: 300px;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
@@ -573,8 +578,9 @@ details summary {
 details summary::after {
   content: '+';
   color: #720000;
+  margin-top: 1rem;
   position: absolute;
-  font-size: 1.75rem;
+  font-size: 3rem;
   line-height: 0;
   right: 0;
   -webkit-transform-origin: center;
@@ -586,7 +592,7 @@ details summary::after {
 details[open] summary::after {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
-  font-size: 2rem;
+  font-size: 4rem;
 }
 
 details summary {
@@ -852,14 +858,18 @@ details p {
   margin: 0 auto;
 }
 
-.experiences-right-side svg {
+.experiences-right-side .work-experiences-icons {
   width: 300px;
+  height: 300px;
+  background: url("../images/SVGIcons/work.svg");
+  background-size: 300px;
   opacity: 0;
   -webkit-transition: 4s;
   transition: 4s;
 }
 
-.experiences-right-side:hover svg {
+.experiences-right-side:hover .work-experiences-icons,
+.experiences-right-side:active .work-experiences-icons {
   opacity: .5;
   -webkit-animation: open 4s ease-in-out;
           animation: open 4s ease-in-out;
