--- a/src/styles/_experiences.scss
+++ b/src/styles/_experiences.scss
@@ -64,13 +64,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100;400&display=swap');
 
-.my-introduction-heading {
-  h2 {
-    font-family: 'DM Serif Display', serif;
-    opacity: .7;
-    margin-left: 2.6rem;
-  }
-}
+// .my-introduction-heading {
+//   h2 {
+//     font-family: 'DM Serif Display', serif;
+//     opacity: .7;
+//     margin-left: 2.6rem;
+//   }
+// }
 
 .positioning-about-main-heading {
   font-family: 'DM Serif Display', serif;
