--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -332,10 +332,12 @@ nav a h2:hover {
     text-transform: uppercase;
     font-size: 12rem;
     color: rgb(114, 0, 0);
+    line-height: 1;
   }
   h2 {
     font-size: 6rem;
-    margin-top: -3rem;
+    margin-top: -2rem;
+    margin-left: 2rem;
   }
 }
 
