--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -1,5 +1,5 @@
-// ! max-width: 1024px - iPad Pro
-@media only screen and (max-width: 1024px) {
+// ! Sorting navbar icon at 1360px
+@media only screen and (max-width: 1360px) {
 
   // -- Responsive navbar -- 
 
@@ -31,7 +31,7 @@
     position: absolute;
     height: 9px;
     width: 100%;
-    background: #d3531a;
+    background: rgb(144, 0, 0);
     border-radius: 9px;
     opacity: 1;
     left: 0;
@@ -146,9 +146,12 @@
     }
   }
 
-
 // -- End navbar --
 
+}
+
+// ! max-width: 1024px - iPad Pro
+@media only screen and (max-width: 1024px) {
 
   .disabled {
     pointer-events: none;
@@ -172,11 +175,6 @@
     }
     .space-unicode {
       display: none;
-    }
-    .tominc-positioning {
-      padding-top: -2rem;
-      margin-top: -3rem;
-      line-height: .8;
     }
     h1 {
       font-size: 12rem;
@@ -337,11 +335,6 @@
     }
     .space-unicode {
       display: none;
-    }
-    .tominc-positioning {
-      padding-top: -2rem;
-      margin-top: -3rem;
-      line-height: 1;
     }
     h1 {
       font-size: 10rem;
