Sort responsivness from highest to lowest px

--- a/src/styles/_experiences.scss
+++ b/src/styles/_experiences.scss
@@ -1,3 +1,11 @@
+// ! Fonts
+
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
+
+
 /* ! Experiences & Education */
 .experiences {
   min-height: 100vh;
@@ -62,16 +70,6 @@
   }
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100;400&display=swap');
-
-// .my-introduction-heading {
-//   h2 {
-//     font-family: 'DM Serif Display', serif;
-//     opacity: .7;
-//     margin-left: 2.6rem;
-//   }
-// }
-
 .positioning-about-main-heading {
   font-family: 'DM Serif Display', serif;
   font-size: 2rem;
@@ -83,10 +81,6 @@
     font-size: 1.5rem;
   }
 }
-
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
 
 .experiences-two-padding {
   padding-bottom: 2rem;
