--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -11,6 +11,26 @@
   // cursor: pointer;
 }
 
+.about-main-heading {
+  font-size: 8rem;
+  letter-spacing: .3rem;
+  text-transform: uppercase;
+  transform: rotate(180deg);
+  writing-mode: vertical-lr;
+  text-align: center;
+  line-height: .2;
+  font-family: "didot";
+  transition: .4s;
+  opacity: .4;
+  animation: open 4s ease-in-out;
+}
+
+.about-main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .about-branding-picture {
   display: flex;
   align-items: flex-start;
@@ -25,21 +45,17 @@
 }
 
 .positioning-brand-statement-paragraph {
-  margin-left: 28rem;
+  margin-left: 27rem;
   margin-top: -14.5rem;
   animation: open 5s ease-in-out;
   z-index: 1;
+  width: 450px;
 }
 
 .positioning-about-main-heading {
   margin-top: 3rem;
   animation: open 2s ease-in-out;
-}
-
-.projects-main-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 480px;
 }
 
 .skills-positioning-container {
@@ -90,7 +106,7 @@
 
 .container {
   position: relative;
-  width: 75px;
+  width: 100px;
   margin: 1rem;
 }
 
