--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -345,6 +345,86 @@
 
 }
 
+
+// ! max-width: 950px - About section
+@media only screen and (max-width: 950px) {
+
+  .positioning-about-main-heading {
+    margin-left: -1rem;
+  }
+
+  .my-photo-positioning {
+    margin-left: 4rem;
+  }
+
+  .positioning-brand-statement-paragraph {
+    margin-top: 4rem;
+    margin-left: -25rem;
+  }
+
+  .about-main-container {
+    margin-left: -6rem;
+  }
+
+  .about-main-heading {
+    font-size: 14rem;
+    margin-top: 10rem;
+    opacity: .05 !important;
+    z-index: -1;
+    margin-left: 4.2rem !important;
+    color: rgba(0,0,0,.5);
+  }
+
+  .experiences {
+    margin-top: 13rem;
+  }
+
+  .experiences-main-heading {
+    font-size: 13rem;
+    margin-left: 0;
+    overflow-wrap: break-word;
+    line-height: .72;
+    z-index: -1;
+    .exper {
+      opacity: .1;
+      z-index: 1;
+    }
+    .ience {
+      opacity: .1;
+    }
+  }
+
+  .skills-positioning-container {
+    width: 80%;
+    margin-left: -2rem; 
+  }
+
+  .container {
+    margin: .6rem;
+  }
+
+  .projects-main-heading {
+    font-size: 13rem;
+    line-height: .35;
+    opacity: .05;
+    z-index: -1;
+  }
+
+  .project-details-width {
+    width: 80%;
+    margin-left: -3rem;
+  }
+
+  .contact-main-heading {
+    font-size: 13rem;
+    opacity: .05;
+    margin-left: -5rem;
+    overflow: hidden;
+    z-index: -1;
+  }
+
+}
+
 // ! max-width: 800px - iPad
 @media only screen and (max-width: 800px) {
 
