--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -143,6 +143,7 @@ details p {
   display: flex;
   justify-content: center;
   margin-top: 3rem;
+  margin-bottom: 3rem;
   ul {
     display: flex;
     li {
