--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -144,6 +144,10 @@
         color: black;
       }
     }
+    .about-main-heading, .experiences-main-heading, .projects-main-heading, .contact-main-heading  {
+      color:antiquewhite;
+      opacity: .1 !important;
+    }
   }
 
 // -- End navbar --
@@ -211,8 +215,86 @@
 
 }
 
+// ! max-width 1280x800 - Large screen
+
+@media only screen and (max-width: 1280px) {
+
+  // ? Home section
+
+  .my-introduction-heading {
+    h2 {
+      font-size: 5rem;
+    }
+  }
+
+  // ? About section
+
+  .about-main-container {
+    margin-left: -5rem;
+  }
+
+  .about-main-heading {
+    font-size: 13rem;
+    margin-top: 10rem;
+    opacity: .05 !important;
+    z-index: -1;
+    margin-left: 1.5rem !important;
+    color: rgba(0,0,0,.5);
+  }
+
+  .experiences {
+    margin-top: 13rem;
+  }
+
+  .experiences-main-heading {
+    font-size: 13rem;
+    margin-left: -2.5rem;
+    overflow: hidden;
+    line-height: 1;
+    z-index: -1;
+    opacity: .05;
+  }
+
+  .skills-positioning-container {
+    width: 80%;
+    margin-left: -2rem; 
+  }
+
+  .container {
+    margin: .5rem .5rem 1rem;
+  }
+
+  .text {
+    margin-left: -.9rem;
+  }
+
+  .projects-main-heading {
+    font-size: 13rem;
+    line-height: .35;
+    opacity: .05;
+    z-index: -1;
+  }
+
+  // ? Projects section
+
+  .project-details-width {
+    width: 80%;
+    margin-left: 1.5rem;
+  }
+
+  // ? Contact section
+
+  .contact-main-heading {
+    font-size: 13rem;
+    opacity: .05;
+    margin-left: -5rem;
+    z-index: -1;
+  }
+}
+
 // ! max-width: 1225px - About section
 @media only screen and (max-width: 1225px) {
+
   // ? About page
 
   .positioning-about-main-heading {
@@ -240,8 +322,21 @@
 
 }
 
+// ! max-width: 1024 px and max-height: 800px - Medium Screen
 
-// ! max-width: 1024px - iPad Pro
+@media screen and (max-height: 800px)  {
+  @media screen and (max-width: 1024px)  {
+   
+    .about {
+      margin-top: -20rem !important;          // I had to use !important, otherwise the ipad pro 12' specifics were overwriting my medium screen specificts.
+    }
+
+  }
+}
+
+
+
+// ! max-width: 1024px - iPad Pro 12
 @media only screen and (max-width: 1024px) {
 
   .disabled {
@@ -268,40 +363,41 @@
       display: none;
     }
     h1 {
-      font-size: 12rem;
-    }
-    h2 {
-      font-size: 6rem;
-      margin-top: 3rem;
+      font-size: 11rem;
+      margin-top: -3rem;
       line-height: .8;
       margin-left: 2rem;
     }
+    h2 {
+      font-size: 4.5rem;
+      margin-top: 3rem;
+      line-height: .8;
+      margin-left: 3.5rem;
+    }
   }
 
-  // // ? About page
+  // ? About page
 
-  // .positioning-about-main-heading {
-  //   flex-direction: column;
-  //   margin-top: 11rem;
-  //   width: 400px;
-  //   p {
-  //     margin-right: -3rem;
-  //   }
-  // }
+  .about {
+    margin-top: -50rem;
+  }
 
-  // .my-photo-positioning {
-  //   margin-top: 11rem;
-  //   margin-left: 6rem;
-  // }
+  .about-main-heading {
+    margin-left: 3.8rem !important;
+  }
 
-  // .positioning-brand-statement-paragraph {
-  //   margin-top: 4rem;
-  //   margin-left: -25rem;
-  // }
+  .positioning-about-main-heading {
+    margin-left: -1rem;
+  }
 
-  // .skills-icons-positioning {
-  //   flex-wrap: wrap
-  // }
+  .positioning-brand-statement-paragraph {
+    margin-left: -25rem;
+  }
+
+  .my-photo-positioning {
+    margin-left: 4rem;
+  }
+
 
   // ? Experience page
 
@@ -313,7 +409,36 @@
     display: none;
   }
 
+  .experiences {
+    margin-bottom: 16rem;
+  }
+
+  .experiences-main-heading {
+    margin-left: -.2rem;
+    overflow-wrap: break-word;
+    line-height: .78;
+  }
+
+  // .experiences-main-heading {
+  //   font-size: 13rem;
+  //   margin-left: 0;
+  //   overflow-wrap: break-word;
+  //   line-height: .72;
+  //   z-index: -1;
+  //   .exper {
+  //     opacity: .1;
+  //     z-index: 1;
+  //   }
+  //   .ience {
+  //     opacity: .1;
+  //   }
+  // }
+
   // ? Projects page
+
+  .projects {
+    margin-bottom: 18rem;
+  }
 
   .accordion-text {
     flex-direction: column;
@@ -334,13 +459,16 @@
   }
 
   .project-details-width {
-    margin-bottom: 10rem;
+    margin-bottom: 1rem;
+    margin-left: -.8rem;
   }
 
   // ? Contact page
 
-  .contact-header {
-    margin-left: -9rem;
+  .contact-main-heading {
+    overflow: hidden;
+    line-height: .8;
+    margin-left: -3rem;
   }
 
 }
@@ -379,20 +507,20 @@
     margin-top: 13rem;
   }
 
-  .experiences-main-heading {
-    font-size: 13rem;
-    margin-left: 0;
-    overflow-wrap: break-word;
-    line-height: .72;
-    z-index: -1;
-    .exper {
-      opacity: .1;
-      z-index: 1;
-    }
-    .ience {
-      opacity: .1;
-    }
-  }
+  // .experiences-main-heading {
+  //   font-size: 13rem;
+  //   margin-left: 0;
+  //   overflow-wrap: break-word;
+  //   line-height: .72;
+  //   z-index: -1;
+  //   .exper {
+  //     opacity: .1;
+  //     z-index: 1;
+  //   }
+  //   .ience {
+  //     opacity: .1;
+  //   }
+  // }
 
   .skills-positioning-container {
     width: 80%;
@@ -424,6 +552,9 @@
   }
 
 }
+
+// ! max-width: 834px (height 1194px) - iPad Pro 11'
+
 
 // ! max-width: 800px - iPad
 @media only screen and (max-width: 800px) {
