--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -539,8 +539,8 @@
 
 // ! max-width: 834px (height 1194px) - iPad Pro 11'
 
-@media screen and (max-height: 1194px)  {
-  @media screen and (max-width: 834px) {
+@media screen and (max-height: 1194px) and (-webkit-min-device-pixel-ratio: 2)  {
+  @media screen and (max-width: 834px) and (-webkit-min-device-pixel-ratio: 2) {
 
     // ? Side navbar
 
