--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1519,7 +1519,7 @@ textarea {
   }
 }
 
-@media screen and (max-height: 1194px) and (max-width: 834px) {
+@media screen and (max-height: 1194px) and (-webkit-min-device-pixel-ratio: 2) and (max-width: 834px) and (-webkit-min-device-pixel-ratio: 2) {
   .side-navbar {
     width: 50%;
   }
