Still problems with toggle and navbar icon

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -16,28 +16,6 @@
   }
 }
 
-// toggle burger
-
-// .toggle-burger {
-//   position: fixed;
-//   top: 30px;
-//   right: 30px;
-//   width: 50px;
-//   height: 50px;
-//   background: #000 url('../images/menu.png');
-//   background-size: 30px;
-//   background-position: center;
-//   background-repeat: no-repeat;
-//   cursor: pointer;
-// }
-
-// .toggle-burger.active {
-//   background: #000 url('../images/close.png');
-//   background-size: 25px;
-//   background-position: center;
-//   background-repeat: no-repeat;
-// }
-
 // home scroll
 
 .scroll-home {
@@ -207,6 +185,7 @@ body {
 }
 
 .toggle-button-position {
+  position: relative;
   display: flex;
   justify-content: center;
   button {
