--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -181,6 +181,7 @@ body {
 }
 
 .toggle-button-position {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
