--- a/src/styles/_media-query-original.scss
+++ b/src/styles/_media-query-original.scss
@@ -558,9 +558,9 @@
 
   // ? Landing page
 
-  .homepage-container {
-    height: 180vh;
-  }
+  // .homepage-container {
+  //   height: 180vh;
+  // }
 
   nav {
     margin-right: .7rem;
