--- a/src/styles/_media-query-original.scss
+++ b/src/styles/_media-query-original.scss
@@ -556,6 +556,10 @@
 // ! max-width: 414px - iPhone 6/7/8 Plus
 @media only screen and (max-width: 414px) {
 
+  .nav-icon {
+    height: 16vh;
+  }
+
   // ? Landing page
 
   // .homepage-container {
