Was typing in the wrong file

--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -909,11 +909,11 @@
 // ! max-width: 414px - iPhone 6/7/8 Plus
 @media only screen and (max-width: 414px) {
 
-  // ? Landing page
+  // .nav-icon {
+  //   margin-right: 2rem;
+  // }
 
-  .homepage-container {
-    height: 180vh;
-  }
+  // ? Landing page
 
   nav {
     margin-right: .7rem;
