--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -9,11 +9,11 @@
 
   .nav-icon {
     width: 50px;
-    height: 50px;
+    // height: 50px;
     position: fixed;
     margin-top: 2rem;
-    margin-bottom: 50px;
-    right: 32px;
+    // margin-bottom: 50px;
+    right: 2rem;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
     -o-transform: rotate(0deg);
