--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1106,11 +1106,9 @@ textarea {
   }
   .nav-icon {
     width: 50px;
-    height: 50px;
     position: fixed;
     margin-top: 2rem;
-    margin-bottom: 50px;
-    right: 32px;
+    right: 2rem;
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
     -webkit-transition: .5s ease-in-out;
