--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -181,13 +181,7 @@ body {
 }
 
 .toggle-button-position {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  position: absolute;
 }
 
 .toggle-button-position button {
