--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -181,7 +181,12 @@ body {
 }
 
 .toggle-button-position {
-  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .toggle-button-position button {
