--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -539,8 +539,8 @@
 
 // ! max-width: 834px (height 1194px) - iPad Pro 11'
 
-@media screen and (min-device-height: 1194px)  {
-  @media screen and (min-device-width: 834px) {
+@media screen and (max-device-height: 1194px)  {
+  @media screen and (max-device-width: 834px) {
 
     // ? Side navbar
 
