--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -547,7 +547,7 @@
     .side-navbar {
       width: 50%;
       .top-navbar {
-        margin-top: -16rem;
+        // margin-top: -16rem;
       }
     }
 
