--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -552,7 +552,7 @@
     }
 
     .homepage-container {
-      margin-top: 20rem;
+      margin-top: 100rem !important;
     }
 
     // ? About section
