--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -551,8 +551,10 @@
       }
     }
 
-    .homepage-container {
-      margin-top: 100rem !important;
+    .toggle-button-position {
+      button {
+        margin-top: -10rem !important;
+      }
     }
 
     // ? About section
