Testing postition of buttons

--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -553,8 +553,12 @@
 
     .toggle-button-position {
       button {
-        margin-top: -10rem !important;
+        margin-top: -50rem;
       }
+    }
+
+    .nav-icon {
+      margin-top: -50rem;
     }
 
     // ? About section
