Testing projects positioning in ipad

--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -600,6 +600,10 @@
       margin-left: -2.3rem;
     }
 
+    .project-icon-container {
+      display: flex;
+    }
+
     // ? Contact section
 
     .contacts {
