testing projects positioning (ipad)

--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -600,8 +600,8 @@
       margin-left: -2.3rem;
     }
 
-    .project-icon-container {
-      display: flex;
+    .project-icon {
+      margin-right: 6rem;
     }
 
     // ? Contact section
