--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1552,10 +1552,8 @@ textarea {
   .project-details-width {
     margin-left: -2.3rem;
   }
-  .project-icon-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+  .project-icon {
+    margin-right: 6rem;
   }
   .contacts {
     margin-top: -5rem;
