--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -600,8 +600,17 @@
       margin-left: -2.3rem;
     }
 
-    .project-icon {
-      margin-right: 6rem;
+    .summary-positioning {
+      .project-icon-container {
+        margin-right: 3rem;
+      }
+      h3 {
+        margin-left: 3rem;
+      }
+    }
+
+    .details summary::after {
+      margin-top: 2rem;
     }
 
     // ? Contact section
