Ipad positioning projects

--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -602,15 +602,15 @@
 
     .summary-positioning {
       .project-icon-container {
-        margin-right: 3rem;
+        margin-top: 3rem;
       }
       h3 {
-        margin-left: 3rem;
+        margin-left: 5rem;
       }
     }
 
     .details summary::after {
-      margin-top: 2rem;
+      margin-bottom: 2rem;
     }
 
     // ? Contact section
