--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1552,11 +1552,14 @@ textarea {
   .project-details-width {
     margin-left: -2.3rem;
   }
-  .summary-positioning .project-icon-container {
+  .summary-positioning .project-icon {
     margin-top: 3rem;
   }
   .summary-positioning h3 {
     margin-left: 5rem;
+  }
+  .summary-positioning .project-images-resize {
+    width: 600px !important;
   }
   .details summary::after {
     margin-bottom: 2rem;
