--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1553,16 +1553,17 @@ textarea {
     margin-left: -2.3rem;
   }
   .summary-positioning .project-icon {
-    margin-top: 3rem;
+    margin-top: 2rem;
   }
   .summary-positioning h3 {
     margin-left: 5rem;
   }
   .summary-positioning .project-images-resize {
-    width: 600px !important;
+    width: 100%;
+    height: 100%;
   }
   .details summary::after {
-    margin-bottom: 2rem;
+    margin-bottom: 2rem !important;
   }
   .contacts {
     margin-top: -5rem;
