--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -608,13 +608,12 @@
         margin-left: 5rem;
       }
       .project-images-resize {
-        width: 100%;
-        height: 100%;
+        height: 300px;
       }
     }
 
-    .details summary::after {
-      margin-bottom: 2rem !important;
+    .details summary {
+      margin-bottom: 2rem;
     }
 
     // ? Contact section
