--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1559,11 +1559,10 @@ textarea {
     margin-left: 5rem;
   }
   .summary-positioning .project-images-resize {
-    width: 100%;
-    height: 100%;
+    height: 300px;
   }
-  .details summary::after {
-    margin-bottom: 2rem !important;
+  .details summary {
+    margin-bottom: 2rem;
   }
   .contacts {
     margin-top: -5rem;
