--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -607,9 +607,10 @@
       h3 {
         margin-left: 5rem;
       }
-      .project-images-resize {
-        height: 300px;
-      }
+    }
+
+    img.project-images-resize {
+      height: 300px !important;
     }
 
     .details summary {
