--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -610,11 +610,11 @@
     }
 
     img.project-images-resize {
-      height: 300px !important;
+      height: 450px !important;
     }
 
     .details summary {
-      margin-bottom: 2rem;
+      margin-bottom: 2rem !important;
     }
 
     // ? Contact section
