--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1559,10 +1559,10 @@ textarea {
     margin-left: 5rem;
   }
   img.project-images-resize {
-    height: 300px !important;
+    height: 450px !important;
   }
   .details summary {
-    margin-bottom: 2rem;
+    margin-bottom: 2rem !important;
   }
   .contacts {
     margin-top: -5rem;
